--- a/index.html
+++ b/index.html
@@ -233,18 +233,18 @@
             },
             lotacao: { 
                 inputs: ['Dados'], 
-                placeholder: "Ex: elis.asandra / SEC\tSEC - SECSINC / SEC\tBásico",
+                placeholder: "Ex: meudeus.olazu / SEC\tSEC - SECSINC / SEC\tBásico",
                 fn: (v) => `Prezado(a),\n\nSua solicitação foi atendida.\n${v[0]}\n\nEstamos à disposição para quaisquer dúvidas ou informações adicionais.` 
             },
             desligamento: { inputs: [], fn: () => `Prezado(a),\n\nSua solicitação foi atendida. As permissões de acesso SEI, expiram hoje, às 23h59.\n\nEstamos à disposição para quaisquer dúvidas ou informações adicionais.` },
             reabertura: { 
                 inputs: ['Dados'], 
-                placeholder: "Ex: elis.asandra / SEC\tSEC - SECSINC / SEC\tReabreProcesso",
+                placeholder: "Ex: salve.engano / SEC\tSEC - SECSINC / SEC\tReabreProcesso",
                 fn: (v) => `Prezado(a),\n\nPermissão de reabertura de processo concedida para o último usuário a finalizar o processo.\nPermissão ativa até o próximo dia útil às 23h59, caso o usuário não efetue a reabertura no prazo, por favor abrir outro chamado solicitando liberação novamente.\n\n${v[0]}\n\n1 - Sair do SEI e entrar novamente;\n2 - Pesquisar o processo informado;\n3 - Clicar no ícone "Reabrir processo" que está localizado ao lado do ícone de "anotações".` 
             },
             desanexar: { 
                 inputs: ['Dados'], 
-                placeholder: "Ex: elis.asandra / SEC\tSEC - SECSINC / SEC\tDesanexaProcesso",
+                placeholder: "Ex: aique.susto / SEC\tSEC - SECSINC / SEC\tDesanexaProcesso",
                 fn: (v) => `Prezado(a),\n\nPermissão ativa até o próximo dia útil às 23h59, caso o usuário não efetue a desanexação no prazo, por favor abrir outro chamado solicitando liberação novamente.\n\n${v[0]}\n\nPROCEDIMENTOS PARA DESANEXAÇÃO:\n\n1 - Pesquisar o processo principal informado;\n2 - Clicar no processo anexado;\n3 - Clicar no ícone "desanexar processo" , que está localizado ao lado do ícone de "Ciência";\n4 - Expor o motivo e clicar em salvar.` 
             },
             restrito: { inputs: [], fn: () => `Prezado(a),\n\nO processo informado encontra-se restrito. Por favor, anexar o print do andamento do processo para continuidade do atendimento.\n\nProcedimentos:\n1 - Consultar o processo\n2 - Clicar no botão “consultar andamento”` },
@@ -412,3 +412,4 @@
 
 </body>
 </html>
+
