--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
 
         <div id="grp-models" class="model-selector hidden">
-            <button class="model-btn" onclick="selectModel('grp', 'criacao_acesso')">Criação de Acesso GRP</button>
+            <button class="model-btn" onclick="selectModel('grp', 'criacao_acesso')">Criação de Acesso/Reset</button>
         </div>
 
         <div id="utilidades-models" class="model-selector hidden">
