--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             desligamento: { inputs: [], fn: () => `Prezado(a),\n\nSua solicitação foi atendida. As permissões de acesso SEI, expiram hoje, às 23h59.\n\nEstamos à disposição para quaisquer dúvidas ou informações adicionais.` },
             reabertura: { 
                 inputs: ['Dados'], 
-                placeholder: "Ex: aique.susto / SEC\tSEC - SECSINC / SEC\tReabreProcesso",
+                placeholder: "Ex: traumatismo.ucraniano / SEC\tSEC - SECSINC / SEC\tReabreProcesso",
                 fn: (v) => `Prezado(a),\n\nPermissão de reabertura de processo concedida para o último usuário a finalizar o processo.\nPermissão ativa até o próximo dia útil às 23h59, caso o usuário não efetue a reabertura no prazo, por favor abrir outro chamado solicitando liberação novamente.\n\n${v[0]}\n\n1 - Sair do SEI e entrar novamente;\n2 - Pesquisar o processo informado;\n3 - Clicar no ícone "Reabrir processo" que está localizado ao lado do ícone de "anotações".` 
             },
             desanexar: { 
@@ -442,4 +442,5 @@
 
 </body>
 </html>
+
 
