--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         grp: {
             criacao_acesso: { 
                 inputs: ['Usuário'], 
-                placeholder: "Ex: 40028922 - Bota a Capa Abuuh",
+                placeholder: "Ex: quarenta e lá vai pancada",
                 fn: (v) => `Prezado(a),\nSua solicitação foi atendida.\n\nUsuário(s): \n${v[0]}\nSenha: 123\n\nFicamos à disposição para quaisquer esclarecimentos.`
             }
         },
@@ -442,5 +442,6 @@
 
 </body>
 </html>
+
 
 
