adicao de documentos DePara

--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
             <a href="documentos/instrução_normativa_conjunta_cge.pdf" download="instrução_normativa_conjunta_cge.pdf" class="model-btn">Instrução Normativa SEI</a>
             <a href="documentos/planilha_cadastro_sei.xlsx" download="planilha_cadastro_sei.xlsx" class="model-btn">Planilha Cadastro SEI</a>
             <a href="documentos/respostas_padrao_word.docx" download="respostas_padrao_word.docx" class="model-btn">Respostas Padrão (Word)</a>
+			<a href="documentos/modelo_depara.xlsx" download="modelo_depara.xlsx" class="model-btn">Modelo DePara XLSX</a>
+			<a href="documentos/modelo_preenchimento.pdf" download="modelo_preenchimento.pdf" class="model-btn">Modelo Preenchimento DePara</a>
         </div>
 
         <div id="utilidades-models" class="model-selector hidden">
@@ -490,4 +492,3 @@
 </body>
 
 </html>
-
