nova resposta SEI

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <button class="model-btn" onclick="selectModel('sei', 'planilha')">Pedir Planilha</button>
             <button class="model-btn" onclick="selectModel('sei', 'abertura_bd')">Abertura Demanda BD</button>
             <button class="model-btn" onclick="selectModel('sei', 'demanda_user')">Abertura Demanda/User</button>
+			<button class="model-btn" onclick="selectModel('sei', 'solicitacao')">Solicitação Atendida</button>
         </div>
 		
         <div id="eturmalina-models" class="model-selector hidden">
@@ -153,8 +154,8 @@
             <a href="documentos/instrução_normativa_conjunta_cge.pdf" download="instrução_normativa_conjunta_cge.pdf" class="model-btn">Instrução Normativa SEI</a>
             <a href="documentos/planilha_cadastro_sei.xlsx" download="planilha_cadastro_sei.xlsx" class="model-btn">Planilha Cadastro SEI</a>
             <a href="documentos/respostas_padrao_word.docx" download="respostas_padrao_word.docx" class="model-btn">Respostas Padrão (Word)</a>
-			<a href="documentos/modelo_depara.xlsx" download="modelo_depara.xlsx" class="model-btn">Modelo DePara XLSX</a>
-			<a href="documentos/modelo_preenchimento.pdf" download="modelo_preenchimento.pdf" class="model-btn">Modelo Preenchimento DePara</a>
+			<a href="documentos/modelo_depara.xlsx" download="modelo_depara.xlsx" class="model-btn">Modelo DePara (XLSX)</a>
+			<a href="documentos/modelo_preenchimento.pdf" download="modelo_preenchimento.pdf" class="model-btn">Instruções DePara (PDF)</a>
         </div>
 
         <div id="utilidades-models" class="model-selector hidden">
@@ -300,6 +301,8 @@
             },
             restrito: { inputs: [], fn: () => `Prezado(a),\n\nO processo informado encontra-se restrito. Por favor, anexar o print do andamento do processo para continuidade do atendimento.\n\nProcedimentos:\n1 - Consultar o processo\n2 - Clicar no botão “consultar andamento”` },
             sem_resposta: { inputs: [], fn: () => `Prezado(a),\n\nDevido à falta de retorno, estamos finalizando este chamado.\n\nCaso necessite prosseguir, por favor, faça uma nova solicitação.` },
+			solicitacao: { inputs: [], fn: () => `Prezado(a),\n\nSua solicitação foi atendida.\n\nEstamos à disposição para quaisquer dúvidas ou informações adicionais.`  
+            },
             unidade: { inputs: [], fn: () => `Prezado(a),\n\nInformo que o(a) servidor(a) informado(a) já possui acesso com permissão de assinatura (Básico) em outra unidade.\n\nPara a concessão de assinatura em mais de um setor (unidade), é necessário anexar, no chamado, cópia da Portaria publicada no Diário Oficial, de forma explícita, citando “cumulativamente” ou “sem prejuízo das demais funções”.\n\nCaso não haja Portaria, recomendamos a utilização da funcionalidade “Bloco de Assinatura”, disponibilizada no SEI.\n\nPermanecemos à disposição para quaisquer esclarecimentos.` },
             planilha: { inputs: [], fn: () => `Prezado(a),\n\nPara cadastro e acesso ao SEI, é necessário anexar a planilha de cadastro devidamente preenchida com os dados do(a) servidor(a).` },
             abertura_bd: { 
@@ -310,6 +313,8 @@
                 inputs: [], 
                 fn: () => `Prezado,\n\nPara atender à sua solicitação, foi necessária a abertura de uma demanda junto ao setor de Infraestrutura e Banco de Dados, com previsão de conclusão em até 7 dias úteis.\nApós a finalização, os relatórios serão anexados a este chamado.\n\nFicamos à disposição para quaisquer esclarecimentos.` 
             }
+
+			
         },
         eturmalina: {
             criacao_acesso: { inputs: [], fn: () => `Prezado,\n\nO acesso ao sistema eTurmalina foi concedido.\n\nUsuário: CPF do servidor\nSenha: CPF do servidor\n\nO próprio sistema orientará o usuário quanto à troca de senha no primeiro acesso.\n\nLink de acesso: http://sigrh.ac.gov.br/eturmalina` },
